--- a/src/components/sections/Landing.astro
+++ b/src/components/sections/Landing.astro
@@ -41,7 +41,7 @@ import { TicketCount } from '@components/TicketCount'
 						<strong class='text-[4ch] sm:text-[8ch] leading-none block italic text-white font-black -rotate-[10deg]'>
 							#<TicketCount client:idle />
 						</strong>
-						<span class='block text-sm w-full -rotate-[10deg] text-primary font-semibold left-0 italic'>tickets registados</span>
+						<span class='block text-sm w-full -rotate-[10deg] text-primary font-semibold left-0 italic'>tickets registrados</span>
 					</div>
 				</div>
 			</div>
